updated the button to be standalone

--- a/myApp/app/shared/tooltip-button/tooltip-button.template.html
+++ b/myApp/app/shared/tooltip-button/tooltip-button.template.html
@@ -6,7 +6,7 @@
 
     <!-- BUTTON -->
     <button class="btn button" ng-class="{'btn-primary' : tooltip.isOpen}" ng-click="tooltip.open()" tw-click-outside="tooltip.close()">
-      {{ buttonText }}
+      {{ buttonText || 'Toggle tooltip' }}
     </button>
 
 </div>
